# swiss-taxes

./: LICENSE  README.md
.github/workflows/: build-analysis.yml  build-wasm.yml  format.yml  lints.yml
analysis/: Cargo.toml
analysis/src/: examples.rs  formula.rs  load.rs  main.rs  plot.rs  schema.rs  table.rs
analysis/src/plot/: decorate.rs
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs  plot.rs  table.rs
